# hwsexp

./: README.md  hwsexp.cabal  hwss.cabal  hwssexp.cabal
cli/main/: Main.hs
core/main/: Generator.hs  GeneratorSupport.hs  Lexer.hs  Parser.hs  ParserSupport.hs  Syntax.hs
core/main/Custom/: Codegen.hs  Emit.hs  Generator.hs  Parser.hs  Syntax.hs
core/main/Hwss/: Generator.hs
core/main/Standard/: Generator.hs  Parser.hs  Syntax.hs
core/test/: GeneratorSpec.hs  GeneratorSpecSupport.hs  ParserSpec.hs
core/test/Custom/: GeneratorSpec.hs
core/test/Standard/: GeneratorSpec.hs  ParserSpec.hs
web/: index.html  numbers.html
web/assets/css/: main.css
web/assets/js/: components.js  d3a.js  d3ac.js  numbers.app.js  numbers.js  numbersApp.js  numbersComp.js
web/js/: client.js
ws/main/: Chat.hs  Main.hs  Timed.hs
