name:                hwsexp
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              Jan Machacek
maintainer:          jan.machacek@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
      Generator
    , Lexer
    , Parser
    , Syntax
    , Custom.Parser
    , Custom.Syntax
    , Standard.Parser
    , Standard.Syntax
  hs-source-dirs:      core/main
  ghc-options:         -W -fwarn-dodgy-imports -fwarn-unused-imports -fwarn-wrong-do-bind -fwarn-lazy-unlifted-bindings
  default-language:    Haskell2010
  build-depends:       
      base         >= 4.6
    , bytestring   >= 0.10.0.2
    , parsec       >= 3.1.3
    , mtl          >= 2.1.2
    , random       >= 1.0.1.1

test-suite core-spec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -Werror
  hs-source-dirs:      core/test
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:
      hwsexp
    , base         >= 4.6 
    , parsec       >= 3.1.3
    , hspec        >= 1.3

executable ws
  main-is:             Main.hs
  hs-source-dirs:      ws/main
  default-language:    Haskell2010
  ghc-options:         -threaded -O2
  build-depends:
      hwsexp
    , text         >= 0.11.3.1
    , mtl          >= 2.1.2
    , base         >= 4.6
    , random       >= 1.0.1.1
    , websockets   >= 0.8.0.0
