name:                hwss
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Jan Machacek
maintainer:          jan.machacek@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Hwss.Generator
  hs-source-dirs:      core/main
  default-language:    Haskell2010
  build-depends:       
      base >=4.6
    , dsp  >= 0.2.2

test-suite core-spec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -Werror
  hs-source-dirs:      core/test
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:
      hwss
    , base    >= 4.6 
    , hspec   >= 1.3

executable ws
  main-is:             Main.hs
  hs-source-dirs:      ws/main
  default-language:    Haskell2010
  build-depends:
      hwss
    , text         >= 0.11.3.1
    , mtl          >= 2.1.2
    , base         >= 4.6
    , time         >= 1.4.0.1
    , websockets   >= 0.8.0.0
